fixed page4 spacing

--- a/style.css
+++ b/style.css
@@ -511,7 +511,7 @@ nav a {
 }
 
 .page4 {
-  margin-top: 936px;
+  margin-top: 672px;
   display: flex;
   gap: 154px;
   padding-left: 135px;
